tests/typing/bad/testfile-extends-8.scala

class A() {}
class B() extends A(42) {}
object Main { def main(args: Array[String]) { } }
